--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "engines": {
     "node": "18.x"
   },
-  "author": "t.me/phuongpd",
+  "author": "t.me/MekongMMO",
   "license": "ISC",
   "dependencies": {
     "@mysten/sui.js": "^0.54.1",
